# CPUInferFace

./: build_demos.sh  build_demos_msvc.bat
face_analytics_sdk/: CMakeLists.txt  detectors.cpp  face_analytics_sdk.cpp  face_analytics_sdk.hpp
interactive_face_detection_demo/: CMakeLists.txt  face_analytics_sdk.cpp  face_analytics_sdk.hpp  main.cpp  visualizer.cpp  visualizer.hpp
models/FP32/: face-detection-retail-0004.xml  face-detection-retail-0005.xml  face-detection-retail-0044.xml
python_demos/face_recognition_demo/: face_recognition_demo.py  run.sh
run/: create_list.py  run_command  run_i.sh  run_ii.sh  run_s.bat  run_s.sh
smart_classroom_demo/: main.cpp
smart_classroom_demo/include/: csvfile.hpp  face.hpp  face_detect.hpp  face_reid.hpp  image_grabber.hpp  smart_classroom_demo.hpp  visualizer.hpp
smart_classroom_demo/src/: cnn.cpp  face.cpp  face_detect.cpp  face_detectors.cpp  face_reid.cpp  visualizer.cpp
